parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM LBRACE list_decl list_sent RBRACE
Rule 2     list_decl -> list_decl decl
Rule 3     list_decl -> decl
Rule 4     list_decl -> empty
Rule 5     decl -> tipo list_id SEMICOLON
Rule 6     tipo -> INT
Rule 7     tipo -> FLOAT
Rule 8     tipo -> BOOL
Rule 9     list_id -> list_id COMMA IDENTIFIER
Rule 10    list_id -> IDENTIFIER
Rule 11    list_sent -> list_sent sent
Rule 12    list_sent -> sent
Rule 13    list_sent -> empty
Rule 14    sent -> sent_if
Rule 15    sent -> sent_while
Rule 16    sent -> sent_do
Rule 17    sent -> sent_read
Rule 18    sent -> sent_write
Rule 19    sent -> bloque
Rule 20    sent -> sent_assign
Rule 21    sent -> BREAK
Rule 22    sent_if -> IF LPAREN exp_bool RPAREN THEN bloque else_part FI
Rule 23    else_part -> ELSE bloque
Rule 24    else_part -> empty
Rule 25    sent_while -> WHILE LPAREN exp_bool RPAREN bloque
Rule 26    sent_do -> DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
Rule 27    sent_read -> READ IDENTIFIER SEMICOLON
Rule 28    sent_write -> WRITE exp_bool_or_value SEMICOLON
Rule 29    exp_value -> NUMBER
Rule 30    exp_value -> IDENTIFIER
Rule 31    bloque -> LBRACE list_sent RBRACE
Rule 32    sent_assign -> IDENTIFIER ASSIGN expr SEMICOLON
Rule 33    sent_assign -> IDENTIFIER ASSIGN exp_bool SEMICOLON
Rule 34    sent_assign -> IDENTIFIER ASSIGN factor SEMICOLON
Rule 35    exp_bool_or_value -> exp_bool
Rule 36    exp_bool_or_value -> exp_value
Rule 37    igualdad -> igualdad EQ rel
Rule 38    igualdad -> igualdad NE rel
Rule 39    igualdad -> rel
Rule 40    rel -> expr op_rel expr
Rule 41    op_rel -> LT
Rule 42    op_rel -> LE
Rule 43    op_rel -> GT
Rule 44    op_rel -> GE
Rule 45    op_rel -> EQ
Rule 46    op_rel -> NE
Rule 47    expr -> expr PLUS term
Rule 48    expr -> expr MINUS term
Rule 49    expr -> term
Rule 50    term -> term TIMES unario
Rule 51    term -> term DIVIDE unario
Rule 52    term -> term POWER unario
Rule 53    term -> unario
Rule 54    unario -> PLUS unario
Rule 55    unario -> MINUS unario
Rule 56    unario -> NOT unario
Rule 57    unario -> factor
Rule 58    factor -> NUMBER
Rule 59    factor -> IDENTIFIER
Rule 60    factor -> TRUE
Rule 61    factor -> FALSE
Rule 62    factor -> increment
Rule 63    factor -> decrement
Rule 64    factor -> LPAREN exp_bool RPAREN
Rule 65    empty -> <empty>
Rule 66    exp_bool -> exp_bool OR comb
Rule 67    exp_bool -> exp_bool OR_OP comb
Rule 68    exp_bool -> comb
Rule 69    comb -> comb AND igualdad
Rule 70    comb -> comb AND_OP igualdad
Rule 71    comb -> igualdad
Rule 72    increment -> IDENTIFIER INCREMENT
Rule 73    increment -> INCREMENT IDENTIFIER
Rule 74    decrement -> IDENTIFIER DECREMENT
Rule 75    decrement -> DECREMENT IDENTIFIER

Terminals, with rules where they appear

AND                  : 69
AND_OP               : 70
ASSIGN               : 32 33 34
BOOL                 : 8
BREAK                : 21
COMMA                : 9
DECREMENT            : 74 75
DIVIDE               : 51
DO                   : 26
ELSE                 : 23
EQ                   : 37 45
FALSE                : 61
FI                   : 22
FLOAT                : 7
GE                   : 44
GT                   : 43
IDENTIFIER           : 9 10 27 30 32 33 34 59 72 73 74 75
IF                   : 22
INCREMENT            : 72 73
INT                  : 6
LBRACE               : 1 31
LE                   : 42
LPAREN               : 22 25 26 64
LT                   : 41
MINUS                : 48 55
NE                   : 38 46
NOT                  : 56
NUMBER               : 29 58
OR                   : 66
OR_OP                : 67
PLUS                 : 47 54
POWER                : 52
PROGRAM              : 1
RBRACE               : 1 31
READ                 : 27
RPAREN               : 22 25 26 64
SEMICOLON            : 5 26 27 28 32 33 34
THEN                 : 22
TIMES                : 50
TRUE                 : 60
UNTIL                : 26
WHILE                : 25
WRITE                : 28
error                : 

Nonterminals, with rules where they appear

bloque               : 19 22 23 25 26
comb                 : 66 67 68 69 70
decl                 : 2 3
decrement            : 63
else_part            : 22
empty                : 4 13 24
exp_bool             : 22 25 26 33 35 64 66 67
exp_bool_or_value    : 28
exp_value            : 36
expr                 : 32 40 40 47 48
factor               : 34 57
igualdad             : 37 38 69 70 71
increment            : 62
list_decl            : 1 2
list_id              : 5 9
list_sent            : 1 11 31
op_rel               : 40
program              : 0
rel                  : 37 38 39
sent                 : 11 12
sent_assign          : 20
sent_do              : 16
sent_if              : 14
sent_read            : 17
sent_while           : 15
sent_write           : 18
term                 : 47 48 49 50 51 52
tipo                 : 5
unario               : 50 51 52 53 54 55 56

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM LBRACE list_decl list_sent RBRACE

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . LBRACE list_decl list_sent RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) program -> PROGRAM LBRACE . list_decl list_sent RBRACE
    (2) list_decl -> . list_decl decl
    (3) list_decl -> . decl
    (4) list_decl -> . empty
    (5) decl -> . tipo list_id SEMICOLON
    (65) empty -> .
    (6) tipo -> . INT
    (7) tipo -> . FLOAT
    (8) tipo -> . BOOL

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    BREAK           reduce using rule 65 (empty -> .)
    IF              reduce using rule 65 (empty -> .)
    WHILE           reduce using rule 65 (empty -> .)
    DO              reduce using rule 65 (empty -> .)
    READ            reduce using rule 65 (empty -> .)
    WRITE           reduce using rule 65 (empty -> .)
    LBRACE          reduce using rule 65 (empty -> .)
    IDENTIFIER      reduce using rule 65 (empty -> .)
    RBRACE          reduce using rule 65 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10

  ! INT             [ reduce using rule 65 (empty -> .) ]
  ! FLOAT           [ reduce using rule 65 (empty -> .) ]
  ! BOOL            [ reduce using rule 65 (empty -> .) ]

    list_decl                      shift and go to state 4
    decl                           shift and go to state 5
    empty                          shift and go to state 6
    tipo                           shift and go to state 7

state 4

    (1) program -> PROGRAM LBRACE list_decl . list_sent RBRACE
    (2) list_decl -> list_decl . decl
    (11) list_sent -> . list_sent sent
    (12) list_sent -> . sent
    (13) list_sent -> . empty
    (5) decl -> . tipo list_id SEMICOLON
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . BREAK
    (65) empty -> .
    (6) tipo -> . INT
    (7) tipo -> . FLOAT
    (8) tipo -> . BOOL
    (22) sent_if -> . IF LPAREN exp_bool RPAREN THEN bloque else_part FI
    (25) sent_while -> . WHILE LPAREN exp_bool RPAREN bloque
    (26) sent_do -> . DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (27) sent_read -> . READ IDENTIFIER SEMICOLON
    (28) sent_write -> . WRITE exp_bool_or_value SEMICOLON
    (31) bloque -> . LBRACE list_sent RBRACE
    (32) sent_assign -> . IDENTIFIER ASSIGN expr SEMICOLON
    (33) sent_assign -> . IDENTIFIER ASSIGN exp_bool SEMICOLON
    (34) sent_assign -> . IDENTIFIER ASSIGN factor SEMICOLON

  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
    BREAK           shift and go to state 23
    RBRACE          reduce using rule 65 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LBRACE          shift and go to state 11
    IDENTIFIER      shift and go to state 28

  ! BREAK           [ reduce using rule 65 (empty -> .) ]
  ! IF              [ reduce using rule 65 (empty -> .) ]
  ! WHILE           [ reduce using rule 65 (empty -> .) ]
  ! DO              [ reduce using rule 65 (empty -> .) ]
  ! READ            [ reduce using rule 65 (empty -> .) ]
  ! WRITE           [ reduce using rule 65 (empty -> .) ]
  ! LBRACE          [ reduce using rule 65 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 65 (empty -> .) ]

    list_sent                      shift and go to state 12
    decl                           shift and go to state 13
    sent                           shift and go to state 14
    empty                          shift and go to state 15
    tipo                           shift and go to state 7
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 5

    (3) list_decl -> decl .

    BREAK           reduce using rule 3 (list_decl -> decl .)
    INT             reduce using rule 3 (list_decl -> decl .)
    FLOAT           reduce using rule 3 (list_decl -> decl .)
    BOOL            reduce using rule 3 (list_decl -> decl .)
    IF              reduce using rule 3 (list_decl -> decl .)
    WHILE           reduce using rule 3 (list_decl -> decl .)
    DO              reduce using rule 3 (list_decl -> decl .)
    READ            reduce using rule 3 (list_decl -> decl .)
    WRITE           reduce using rule 3 (list_decl -> decl .)
    LBRACE          reduce using rule 3 (list_decl -> decl .)
    IDENTIFIER      reduce using rule 3 (list_decl -> decl .)
    RBRACE          reduce using rule 3 (list_decl -> decl .)


state 6

    (4) list_decl -> empty .

    BREAK           reduce using rule 4 (list_decl -> empty .)
    INT             reduce using rule 4 (list_decl -> empty .)
    FLOAT           reduce using rule 4 (list_decl -> empty .)
    BOOL            reduce using rule 4 (list_decl -> empty .)
    IF              reduce using rule 4 (list_decl -> empty .)
    WHILE           reduce using rule 4 (list_decl -> empty .)
    DO              reduce using rule 4 (list_decl -> empty .)
    READ            reduce using rule 4 (list_decl -> empty .)
    WRITE           reduce using rule 4 (list_decl -> empty .)
    LBRACE          reduce using rule 4 (list_decl -> empty .)
    IDENTIFIER      reduce using rule 4 (list_decl -> empty .)
    RBRACE          reduce using rule 4 (list_decl -> empty .)


state 7

    (5) decl -> tipo . list_id SEMICOLON
    (9) list_id -> . list_id COMMA IDENTIFIER
    (10) list_id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 31

    list_id                        shift and go to state 30

state 8

    (6) tipo -> INT .

    IDENTIFIER      reduce using rule 6 (tipo -> INT .)


state 9

    (7) tipo -> FLOAT .

    IDENTIFIER      reduce using rule 7 (tipo -> FLOAT .)


state 10

    (8) tipo -> BOOL .

    IDENTIFIER      reduce using rule 8 (tipo -> BOOL .)


state 11

    (31) bloque -> LBRACE . list_sent RBRACE
    (11) list_sent -> . list_sent sent
    (12) list_sent -> . sent
    (13) list_sent -> . empty
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . BREAK
    (65) empty -> .
    (22) sent_if -> . IF LPAREN exp_bool RPAREN THEN bloque else_part FI
    (25) sent_while -> . WHILE LPAREN exp_bool RPAREN bloque
    (26) sent_do -> . DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (27) sent_read -> . READ IDENTIFIER SEMICOLON
    (28) sent_write -> . WRITE exp_bool_or_value SEMICOLON
    (31) bloque -> . LBRACE list_sent RBRACE
    (32) sent_assign -> . IDENTIFIER ASSIGN expr SEMICOLON
    (33) sent_assign -> . IDENTIFIER ASSIGN exp_bool SEMICOLON
    (34) sent_assign -> . IDENTIFIER ASSIGN factor SEMICOLON

  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
    BREAK           shift and go to state 23
    RBRACE          reduce using rule 65 (empty -> .)
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LBRACE          shift and go to state 11
    IDENTIFIER      shift and go to state 28

  ! BREAK           [ reduce using rule 65 (empty -> .) ]
  ! IF              [ reduce using rule 65 (empty -> .) ]
  ! WHILE           [ reduce using rule 65 (empty -> .) ]
  ! DO              [ reduce using rule 65 (empty -> .) ]
  ! READ            [ reduce using rule 65 (empty -> .) ]
  ! WRITE           [ reduce using rule 65 (empty -> .) ]
  ! LBRACE          [ reduce using rule 65 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 65 (empty -> .) ]

    list_sent                      shift and go to state 32
    sent                           shift and go to state 14
    empty                          shift and go to state 15
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 12

    (1) program -> PROGRAM LBRACE list_decl list_sent . RBRACE
    (11) list_sent -> list_sent . sent
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . BREAK
    (22) sent_if -> . IF LPAREN exp_bool RPAREN THEN bloque else_part FI
    (25) sent_while -> . WHILE LPAREN exp_bool RPAREN bloque
    (26) sent_do -> . DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (27) sent_read -> . READ IDENTIFIER SEMICOLON
    (28) sent_write -> . WRITE exp_bool_or_value SEMICOLON
    (31) bloque -> . LBRACE list_sent RBRACE
    (32) sent_assign -> . IDENTIFIER ASSIGN expr SEMICOLON
    (33) sent_assign -> . IDENTIFIER ASSIGN exp_bool SEMICOLON
    (34) sent_assign -> . IDENTIFIER ASSIGN factor SEMICOLON

    RBRACE          shift and go to state 33
    BREAK           shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LBRACE          shift and go to state 11
    IDENTIFIER      shift and go to state 28

    sent                           shift and go to state 34
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 13

    (2) list_decl -> list_decl decl .

    BREAK           reduce using rule 2 (list_decl -> list_decl decl .)
    INT             reduce using rule 2 (list_decl -> list_decl decl .)
    FLOAT           reduce using rule 2 (list_decl -> list_decl decl .)
    BOOL            reduce using rule 2 (list_decl -> list_decl decl .)
    IF              reduce using rule 2 (list_decl -> list_decl decl .)
    WHILE           reduce using rule 2 (list_decl -> list_decl decl .)
    DO              reduce using rule 2 (list_decl -> list_decl decl .)
    READ            reduce using rule 2 (list_decl -> list_decl decl .)
    WRITE           reduce using rule 2 (list_decl -> list_decl decl .)
    LBRACE          reduce using rule 2 (list_decl -> list_decl decl .)
    IDENTIFIER      reduce using rule 2 (list_decl -> list_decl decl .)
    RBRACE          reduce using rule 2 (list_decl -> list_decl decl .)


state 14

    (12) list_sent -> sent .

    RBRACE          reduce using rule 12 (list_sent -> sent .)
    BREAK           reduce using rule 12 (list_sent -> sent .)
    IF              reduce using rule 12 (list_sent -> sent .)
    WHILE           reduce using rule 12 (list_sent -> sent .)
    DO              reduce using rule 12 (list_sent -> sent .)
    READ            reduce using rule 12 (list_sent -> sent .)
    WRITE           reduce using rule 12 (list_sent -> sent .)
    LBRACE          reduce using rule 12 (list_sent -> sent .)
    IDENTIFIER      reduce using rule 12 (list_sent -> sent .)


state 15

    (13) list_sent -> empty .

    RBRACE          reduce using rule 13 (list_sent -> empty .)
    BREAK           reduce using rule 13 (list_sent -> empty .)
    IF              reduce using rule 13 (list_sent -> empty .)
    WHILE           reduce using rule 13 (list_sent -> empty .)
    DO              reduce using rule 13 (list_sent -> empty .)
    READ            reduce using rule 13 (list_sent -> empty .)
    WRITE           reduce using rule 13 (list_sent -> empty .)
    LBRACE          reduce using rule 13 (list_sent -> empty .)
    IDENTIFIER      reduce using rule 13 (list_sent -> empty .)


state 16

    (14) sent -> sent_if .

    RBRACE          reduce using rule 14 (sent -> sent_if .)
    BREAK           reduce using rule 14 (sent -> sent_if .)
    IF              reduce using rule 14 (sent -> sent_if .)
    WHILE           reduce using rule 14 (sent -> sent_if .)
    DO              reduce using rule 14 (sent -> sent_if .)
    READ            reduce using rule 14 (sent -> sent_if .)
    WRITE           reduce using rule 14 (sent -> sent_if .)
    LBRACE          reduce using rule 14 (sent -> sent_if .)
    IDENTIFIER      reduce using rule 14 (sent -> sent_if .)


state 17

    (15) sent -> sent_while .

    RBRACE          reduce using rule 15 (sent -> sent_while .)
    BREAK           reduce using rule 15 (sent -> sent_while .)
    IF              reduce using rule 15 (sent -> sent_while .)
    WHILE           reduce using rule 15 (sent -> sent_while .)
    DO              reduce using rule 15 (sent -> sent_while .)
    READ            reduce using rule 15 (sent -> sent_while .)
    WRITE           reduce using rule 15 (sent -> sent_while .)
    LBRACE          reduce using rule 15 (sent -> sent_while .)
    IDENTIFIER      reduce using rule 15 (sent -> sent_while .)


state 18

    (16) sent -> sent_do .

    RBRACE          reduce using rule 16 (sent -> sent_do .)
    BREAK           reduce using rule 16 (sent -> sent_do .)
    IF              reduce using rule 16 (sent -> sent_do .)
    WHILE           reduce using rule 16 (sent -> sent_do .)
    DO              reduce using rule 16 (sent -> sent_do .)
    READ            reduce using rule 16 (sent -> sent_do .)
    WRITE           reduce using rule 16 (sent -> sent_do .)
    LBRACE          reduce using rule 16 (sent -> sent_do .)
    IDENTIFIER      reduce using rule 16 (sent -> sent_do .)


state 19

    (17) sent -> sent_read .

    RBRACE          reduce using rule 17 (sent -> sent_read .)
    BREAK           reduce using rule 17 (sent -> sent_read .)
    IF              reduce using rule 17 (sent -> sent_read .)
    WHILE           reduce using rule 17 (sent -> sent_read .)
    DO              reduce using rule 17 (sent -> sent_read .)
    READ            reduce using rule 17 (sent -> sent_read .)
    WRITE           reduce using rule 17 (sent -> sent_read .)
    LBRACE          reduce using rule 17 (sent -> sent_read .)
    IDENTIFIER      reduce using rule 17 (sent -> sent_read .)


state 20

    (18) sent -> sent_write .

    RBRACE          reduce using rule 18 (sent -> sent_write .)
    BREAK           reduce using rule 18 (sent -> sent_write .)
    IF              reduce using rule 18 (sent -> sent_write .)
    WHILE           reduce using rule 18 (sent -> sent_write .)
    DO              reduce using rule 18 (sent -> sent_write .)
    READ            reduce using rule 18 (sent -> sent_write .)
    WRITE           reduce using rule 18 (sent -> sent_write .)
    LBRACE          reduce using rule 18 (sent -> sent_write .)
    IDENTIFIER      reduce using rule 18 (sent -> sent_write .)


state 21

    (19) sent -> bloque .

    RBRACE          reduce using rule 19 (sent -> bloque .)
    BREAK           reduce using rule 19 (sent -> bloque .)
    IF              reduce using rule 19 (sent -> bloque .)
    WHILE           reduce using rule 19 (sent -> bloque .)
    DO              reduce using rule 19 (sent -> bloque .)
    READ            reduce using rule 19 (sent -> bloque .)
    WRITE           reduce using rule 19 (sent -> bloque .)
    LBRACE          reduce using rule 19 (sent -> bloque .)
    IDENTIFIER      reduce using rule 19 (sent -> bloque .)


state 22

    (20) sent -> sent_assign .

    RBRACE          reduce using rule 20 (sent -> sent_assign .)
    BREAK           reduce using rule 20 (sent -> sent_assign .)
    IF              reduce using rule 20 (sent -> sent_assign .)
    WHILE           reduce using rule 20 (sent -> sent_assign .)
    DO              reduce using rule 20 (sent -> sent_assign .)
    READ            reduce using rule 20 (sent -> sent_assign .)
    WRITE           reduce using rule 20 (sent -> sent_assign .)
    LBRACE          reduce using rule 20 (sent -> sent_assign .)
    IDENTIFIER      reduce using rule 20 (sent -> sent_assign .)


state 23

    (21) sent -> BREAK .

    RBRACE          reduce using rule 21 (sent -> BREAK .)
    BREAK           reduce using rule 21 (sent -> BREAK .)
    IF              reduce using rule 21 (sent -> BREAK .)
    WHILE           reduce using rule 21 (sent -> BREAK .)
    DO              reduce using rule 21 (sent -> BREAK .)
    READ            reduce using rule 21 (sent -> BREAK .)
    WRITE           reduce using rule 21 (sent -> BREAK .)
    LBRACE          reduce using rule 21 (sent -> BREAK .)
    IDENTIFIER      reduce using rule 21 (sent -> BREAK .)


state 24

    (22) sent_if -> IF . LPAREN exp_bool RPAREN THEN bloque else_part FI

    LPAREN          shift and go to state 35


state 25

    (25) sent_while -> WHILE . LPAREN exp_bool RPAREN bloque

    LPAREN          shift and go to state 36


state 26

    (26) sent_do -> DO . bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (31) bloque -> . LBRACE list_sent RBRACE

    LBRACE          shift and go to state 11

    bloque                         shift and go to state 37

state 27

    (27) sent_read -> READ . IDENTIFIER SEMICOLON
